...

            Column(
                modifier = Modifier.padding(vertical = 16.dp)
            ) {

                Text(
                    text = "BIBLIOTECA CURADA",
                    color = ColorOrangePrimary,
                    fontSize = 11.sp,
                    fontWeight = FontWeight.Bold,
                    letterSpacing = 2.sp
                )

                Spacer(Modifier.height(4.dp))

                Text(
                    text = "Artistas",
                    color = Color.White,
                    fontSize = 36.sp,
                    fontWeight = FontWeight.Bold
                )

                Spacer(Modifier.height(8.dp))
...
